# multi_agent_travel_planner

./: README.md  analysis.md  pyproject.toml
output/: full_trip_plan.md  itinerary.md  report.md  validation.md
src/multi_agent_travel_planner/: crew.py  main.py
src/multi_agent_travel_planner/config/: agents.yaml  settings.py  tasks.yaml
src/multi_agent_travel_planner/tools/: calculator.py
