[project]
name = "multi_agent_travel_planner"
version = "0.1.0"
description = "multi_agent_travel_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.133.1",
    "litellm>=1.75.3",
    "pydantic[email]>=2.11.10",
]

[project.scripts]
multi_agent_travel_planner = "multi_agent_travel_planner.main:run"
run_crew = "multi_agent_travel_planner.main:run"
train = "multi_agent_travel_planner.main:train"
replay = "multi_agent_travel_planner.main:replay"
test = "multi_agent_travel_planner.main:test"
run_with_trigger = "multi_agent_travel_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
